library/src/libqstyleoption.h

typedef struct QStyleOption QStyleOption;
typedef struct QStyleOptionFocusRect QStyleOptionFocusRect;
typedef struct QStyleOptionFrame QStyleOptionFrame;
typedef struct QStyleOptionTabWidgetFrame QStyleOptionTabWidgetFrame;
typedef struct QWidget QWidget;
QTLIBC_API QStyleOption* QStyleOption_new();
QTLIBC_API QStyleOption* QStyleOption_new2(QStyleOption* other);
QTLIBC_API QStyleOption* QStyleOption_new3(int version);
QTLIBC_API QStyleOption* QStyleOption_new4(int version, int typeVal);
QTLIBC_API void QStyleOption_InitFrom(QStyleOption* self, QWidget* w);
QTLIBC_API void QStyleOption_OperatorAssign(QStyleOption* self, QStyleOption* other);
QTLIBC_API void QStyleOption_Delete(QStyleOption* self);
QTLIBC_API QStyleOptionFocusRect* QStyleOptionFocusRect_new();
QTLIBC_API QStyleOptionFocusRect* QStyleOptionFocusRect_new2(QStyleOptionFocusRect* other);
QTLIBC_API void QStyleOptionFocusRect_Delete(QStyleOptionFocusRect* self);
QTLIBC_API QStyleOptionFrame* QStyleOptionFrame_new();
QTLIBC_API QStyleOptionFrame* QStyleOptionFrame_new2(QStyleOptionFrame* other);
QTLIBC_API void QStyleOptionFrame_Delete(QStyleOptionFrame* self);
QTLIBC_API QStyleOptionTabWidgetFrame* QStyleOptionTabWidgetFrame_new();
QTLIBC_API void QStyleOptionTabWidgetFrame_Delete(QStyleOptionTabWidgetFrame* self);