src/qt/libqstyleoption.bf

using System;
using System.Interop;
namespace Qt;

[AllowDuplicates]
public enum QStyleOption__OptionType
{
	SO_Default = 0,
	SO_FocusRect = 1,
	SO_Button = 2,
	SO_Tab = 3,
	SO_MenuItem = 4,
	SO_Frame = 5,
	SO_ProgressBar = 6,
	SO_ToolBox = 7,
	SO_Header = 8,
	SO_DockWidget = 9,
	SO_ViewItem = 10,
	SO_TabWidgetFrame = 11,
	SO_TabBarBase = 12,
	SO_RubberBand = 13,
	SO_ToolBar = 14,
	SO_GraphicsItem = 15,
	SO_Complex = 983040,
	SO_Slider = 983041,
	SO_SpinBox = 983042,
	SO_ToolButton = 983043,
	SO_ComboBox = 983044,
	SO_TitleBar = 983045,
	SO_GroupBox = 983046,
	SO_SizeGrip = 983047,
	SO_CustomBase = 3840,
	SO_ComplexCustomBase = 251658240,
}
[AllowDuplicates]
public enum QStyleOption__StyleOptionType
{
	Type = 0,
}
[AllowDuplicates]
public enum QStyleOption__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionFocusRect__StyleOptionType
{
	Type = 1,
}
[AllowDuplicates]
public enum QStyleOptionFocusRect__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionFrame__StyleOptionType
{
	Type = 5,
}
[AllowDuplicates]
public enum QStyleOptionFrame__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionFrame__FrameFeature
{
	None = 0,
	Flat = 1,
	Rounded = 2,
}
[AllowDuplicates]
public enum QStyleOptionTabWidgetFrame__StyleOptionType
{
	Type = 11,
}
[AllowDuplicates]
public enum QStyleOptionTabWidgetFrame__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionTabBarBase__StyleOptionType
{
	Type = 12,
}
[AllowDuplicates]
public enum QStyleOptionTabBarBase__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionHeader__StyleOptionType
{
	Type = 8,
}
[AllowDuplicates]
public enum QStyleOptionHeader__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionHeader__SectionPosition
{
	Beginning = 0,
	Middle = 1,
	End = 2,
	OnlyOneSection = 3,
}
[AllowDuplicates]
public enum QStyleOptionHeader__SelectedPosition
{
	NotAdjacent = 0,
	NextIsSelected = 1,
	PreviousIsSelected = 2,
	NextAndPreviousAreSelected = 3,
}
[AllowDuplicates]
public enum QStyleOptionHeader__SortIndicator
{
	None = 0,
	SortUp = 1,
	SortDown = 2,
}
[AllowDuplicates]
public enum QStyleOptionHeaderV2__StyleOptionType
{
	Type = 8,
}
[AllowDuplicates]
public enum QStyleOptionHeaderV2__StyleOptionVersion
{
	Version = 2,
}
[AllowDuplicates]
public enum QStyleOptionButton__StyleOptionType
{
	Type = 2,
}
[AllowDuplicates]
public enum QStyleOptionButton__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionButton__ButtonFeature
{
	None = 0,
	Flat = 1,
	HasMenu = 2,
	DefaultButton = 4,
	AutoDefaultButton = 8,
	CommandLinkButton = 16,
}
[AllowDuplicates]
public enum QStyleOptionTab__StyleOptionType
{
	Type = 3,
}
[AllowDuplicates]
public enum QStyleOptionTab__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionTab__TabPosition
{
	Beginning = 0,
	Middle = 1,
	End = 2,
	OnlyOneTab = 3,
}
[AllowDuplicates]
public enum QStyleOptionTab__SelectedPosition
{
	NotAdjacent = 0,
	NextIsSelected = 1,
	PreviousIsSelected = 2,
}
[AllowDuplicates]
public enum QStyleOptionTab__CornerWidget
{
	NoCornerWidgets = 0,
	LeftCornerWidget = 1,
	RightCornerWidget = 2,
}
[AllowDuplicates]
public enum QStyleOptionTab__TabFeature
{
	None = 0,
	HasFrame = 1,
}
[AllowDuplicates]
public enum QStyleOptionToolBar__StyleOptionType
{
	Type = 14,
}
[AllowDuplicates]
public enum QStyleOptionToolBar__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionToolBar__ToolBarPosition
{
	Beginning = 0,
	Middle = 1,
	End = 2,
	OnlyOne = 3,
}
[AllowDuplicates]
public enum QStyleOptionToolBar__ToolBarFeature
{
	None = 0,
	Movable = 1,
}
[AllowDuplicates]
public enum QStyleOptionProgressBar__StyleOptionType
{
	Type = 6,
}
[AllowDuplicates]
public enum QStyleOptionProgressBar__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionMenuItem__StyleOptionType
{
	Type = 4,
}
[AllowDuplicates]
public enum QStyleOptionMenuItem__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionMenuItem__MenuItemType
{
	Normal = 0,
	DefaultItem = 1,
	Separator = 2,
	SubMenu = 3,
	Scroller = 4,
	TearOff = 5,
	Margin = 6,
	EmptyArea = 7,
}
[AllowDuplicates]
public enum QStyleOptionMenuItem__CheckType
{
	NotCheckable = 0,
	Exclusive = 1,
	NonExclusive = 2,
}
[AllowDuplicates]
public enum QStyleOptionDockWidget__StyleOptionType
{
	Type = 9,
}
[AllowDuplicates]
public enum QStyleOptionDockWidget__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionViewItem__StyleOptionType
{
	Type = 10,
}
[AllowDuplicates]
public enum QStyleOptionViewItem__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionViewItem__Position
{
	Left = 0,
	Right = 1,
	Top = 2,
	Bottom = 3,
}
[AllowDuplicates]
public enum QStyleOptionViewItem__ViewItemFeature
{
	None = 0,
	WrapText = 1,
	Alternate = 2,
	HasCheckIndicator = 4,
	HasDisplay = 8,
	HasDecoration = 16,
}
[AllowDuplicates]
public enum QStyleOptionViewItem__ViewItemPosition
{
	Invalid = 0,
	Beginning = 1,
	Middle = 2,
	End = 3,
	OnlyOne = 4,
}
[AllowDuplicates]
public enum QStyleOptionToolBox__StyleOptionType
{
	Type = 7,
}
[AllowDuplicates]
public enum QStyleOptionToolBox__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionToolBox__TabPosition
{
	Beginning = 0,
	Middle = 1,
	End = 2,
	OnlyOneTab = 3,
}
[AllowDuplicates]
public enum QStyleOptionToolBox__SelectedPosition
{
	NotAdjacent = 0,
	NextIsSelected = 1,
	PreviousIsSelected = 2,
}
[AllowDuplicates]
public enum QStyleOptionRubberBand__StyleOptionType
{
	Type = 13,
}
[AllowDuplicates]
public enum QStyleOptionRubberBand__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionComplex__StyleOptionType
{
	Type = 983040,
}
[AllowDuplicates]
public enum QStyleOptionComplex__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionSlider__StyleOptionType
{
	Type = 983041,
}
[AllowDuplicates]
public enum QStyleOptionSlider__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionSpinBox__StyleOptionType
{
	Type = 983042,
}
[AllowDuplicates]
public enum QStyleOptionSpinBox__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionToolButton__StyleOptionType
{
	Type = 983043,
}
[AllowDuplicates]
public enum QStyleOptionToolButton__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionToolButton__ToolButtonFeature
{
	None = 0,
	Arrow = 1,
	Menu = 4,
	MenuButtonPopup = 4,
	PopupDelay = 8,
	HasMenu = 16,
}
[AllowDuplicates]
public enum QStyleOptionComboBox__StyleOptionType
{
	Type = 983044,
}
[AllowDuplicates]
public enum QStyleOptionComboBox__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionTitleBar__StyleOptionType
{
	Type = 983045,
}
[AllowDuplicates]
public enum QStyleOptionTitleBar__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionGroupBox__StyleOptionType
{
	Type = 983046,
}
[AllowDuplicates]
public enum QStyleOptionGroupBox__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionSizeGrip__StyleOptionType
{
	Type = 983047,
}
[AllowDuplicates]
public enum QStyleOptionSizeGrip__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleOptionGraphicsItem__StyleOptionType
{
	Type = 15,
}
[AllowDuplicates]
public enum QStyleOptionGraphicsItem__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleHintReturn__HintReturnType
{
	SH_Default = 61440,
	SH_Mask = 61441,
	SH_Variant = 61442,
}
[AllowDuplicates]
public enum QStyleHintReturn__StyleOptionType
{
	Type = 61440,
}
[AllowDuplicates]
public enum QStyleHintReturn__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleHintReturnMask__StyleOptionType
{
	Type = 61441,
}
[AllowDuplicates]
public enum QStyleHintReturnMask__StyleOptionVersion
{
	Version = 1,
}
[AllowDuplicates]
public enum QStyleHintReturnVariant__StyleOptionType
{
	Type = 61442,
}
[AllowDuplicates]
public enum QStyleHintReturnVariant__StyleOptionVersion
{
	Version = 1,
}
public interface IQStyleOption
{
	void* NativePtr { get; }
}
public class QStyleOption : IQStyleOption
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOption_new();
	}
	
	public ~this()
	{
		CQt.QStyleOption_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOption_new")]
	public static extern void* QStyleOption_new();
	[LinkName("QStyleOption_new2")]
	public static extern void* QStyleOption_new2(void* other);
	[LinkName("QStyleOption_new3")]
	public static extern void* QStyleOption_new3(int32 version);
	[LinkName("QStyleOption_new4")]
	public static extern void* QStyleOption_new4(int32 version, int32 typeVal);
	[LinkName("QStyleOption_InitFrom")]
	public static extern void QStyleOption_InitFrom(void* c_this, void* w);
	[LinkName("QStyleOption_OperatorAssign")]
	public static extern void QStyleOption_OperatorAssign(void* c_this, void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOption_Delete")]
	public static extern void QStyleOption_Delete(void* self);
}
public interface IQStyleOptionFocusRect
{
	void* NativePtr { get; }
}
public class QStyleOptionFocusRect : IQStyleOptionFocusRect, IQStyleOption
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionFocusRect_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionFocusRect_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionFocusRect_new")]
	public static extern void* QStyleOptionFocusRect_new();
	[LinkName("QStyleOptionFocusRect_new2")]
	public static extern void* QStyleOptionFocusRect_new2(void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionFocusRect_Delete")]
	public static extern void QStyleOptionFocusRect_Delete(void* self);
}
public interface IQStyleOptionFrame
{
	void* NativePtr { get; }
}
public class QStyleOptionFrame : IQStyleOptionFrame, IQStyleOption
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionFrame_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionFrame_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionFrame_new")]
	public static extern void* QStyleOptionFrame_new();
	[LinkName("QStyleOptionFrame_new2")]
	public static extern void* QStyleOptionFrame_new2(void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionFrame_Delete")]
	public static extern void QStyleOptionFrame_Delete(void* self);
}
public interface IQStyleOptionTabWidgetFrame
{
	void* NativePtr { get; }
}
public class QStyleOptionTabWidgetFrame : IQStyleOptionTabWidgetFrame, IQStyleOption
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionTabWidgetFrame_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionTabWidgetFrame_Delete(this.nativePtr);
	}
